--- a/content/index.html
+++ b/content/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html>
         <head>
-        <title>cad2025_hw</title>
+        <title>5-bar-Linkage-Plotter</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='首頁.html'>首頁</a></li>
+                     <li><a href='首頁.html'>首頁</a><li><a href='Webots.html'>Webots</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,7 +141,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <br /><h1>首頁</h1>
+    <div id="tipue_search_content"> <a href='Webots.html'>Next</a> >> Webots<br /><h1>首頁</h1>
 <p>課程：電腦輔助設計與實習2025</p>
 <p>此為41171130許明皓的個人網站</p>
 <p>分配作業內容：5-bar Linkage Plotter 的 Webots 模擬</p>
@@ -154,7 +154,8 @@ img.add_border {
 <p data-pm-slice="1 1 []">使用 python 的 Numpy 計算五連桿的逆運動學機構，馬達旋轉角度控制移動路徑</p>
 </li>
 <li>使用 python 的 OpenCV 讀取圖片後生成移動路徑，畫出圖片形狀</li>
-</ol><br /> </div>
+</ol>
+<br /> <a href='Webots.html'>Next</a> >> Webots</div>
         
     <!-- footer -->
       <div class="container">
