--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,2 +1,44 @@
 <h1>首頁</h1>
 <p>課程：電腦輔助設計與實習2025</p>
+<p>此為41171130許明皓的個人網站</p>
+<p>分配作業內容：5-bar Linkage Plotter 的 Webots 模擬</p>
+<p>方法<span>：</span></p>
+<ol>
+<li>
+<p data-pm-slice="1 1 []">匯入模型後，設定 HingeJoint 和 Solid 節點來串接連桿</p>
+</li>
+<li>
+<p data-pm-slice="1 1 []">使用 python 的 Numpy 計算五連桿的逆運動學機構，馬達旋轉角度控制移動路徑</p>
+</li>
+<li>使用 python 的 OpenCV 讀取圖片後生成移動路徑，畫出圖片形狀</li>
+</ol>
+<h1>Webots</h1>
+<h4 data-path-to-node="4">1. 什麼是 Webots？</h4>
+<p data-path-to-node="5">Webots 是由 Cyberbotics 公司開發，並於 2018 年正式開源的機器人模擬器。它支援多種作業系統（Windows, Linux, macOS），廣泛應用於工業機器人、自動駕駛、無人機以及多 agent 系統的開發與教學。</p>
+<p data-path-to-node="6">其核心優勢在於能夠提供精確的物理運算與擬真的視覺傳饋，讓使用者在將演算法部署到實體硬體前，先在虛擬環境中完成驗證。</p>
+<h4 data-path-to-node="8">2. 核心技術特點</h4>
+<ul data-path-to-node="9">
+<li>
+<p data-path-to-node="9,0,0">強大的物理引擎 (ODE)： 採用 Open Dynamics Engine (ODE)，能夠精確模擬剛體動力學、碰撞檢測與摩擦力，非常適合測試如機械手臂的運動軌跡與受力分析。</p>
+</li>
+<li>
+<p data-path-to-node="9,1,0">豐富的感知系統： 內建多種感測器模型，包括：</p>
+<ul data-path-to-node="9,1,1">
+<li>
+<p data-path-to-node="9,1,1,0,0">雷達 (Lidar)、相機 (Camera)、超音波、GPS。</p>
+</li>
+<li>
+<p data-path-to-node="9,1,1,1,0">力感測器 (Force Sensors)、慣性測量單元 (IMU)。</p>
+</li>
+</ul>
+</li>
+<li>
+<p data-path-to-node="9,2,0">跨語言開發環境： 支援 Python、C/C++、Java、MATLAB 及 ROS/ROS2。對於偏好 AI 與 OpenCV 整合開發的使用者，Python API 提供了極佳的靈活性。</p>
+</li>
+<li>
+<p data-path-to-node="9,3,0">高相容性 CAD 導入： 支援從 Fusion 360、SolidWorks 導入 URDF 或 PROTO 模型，方便將自行設計的機械零件直接轉化為模擬物件。</p>
+</li>
+</ul>
+<p></p>
+<p>模型的匯入與建立參考此B站的教學</p>
+<p><iframe allowfullscreen="allowfullscreen" border="0" frameborder="no" framespacing="0" height="400" scrolling="no" src="//player.bilibili.com/player.html?isOutside=true&amp;aid=300047753&amp;bvid=BV1fF411F7D9&amp;cid=748321049&amp;p=1" width="800"></iframe></p>
