--- a/content/sitemap.html
+++ b/content/sitemap.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html>
         <head>
-        <title>cad2025_hw</title>
+        <title>5-bar-Linkage-Plotter</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -129,7 +129,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='首頁.html'>首頁</a></li>
+                     <li><a href='首頁.html'>首頁</a><li><a href='Webots.html'>Webots</a></li>
                       </ul>
                 </nav>
               </div>
@@ -140,4 +140,4 @@ img.add_border {
           </div>
           
         </header>
-    </nav><section><h1>SMap</h1><div id="tipue_search_content"></div><ul><li><a href='首頁.html'>首頁</a></li></ul></section></div></body></html>
+    </nav><section><h1>SMap</h1><div id="tipue_search_content"></div><ul><li><a href='首頁.html'>首頁</a><li><a href='Webots.html'>Webots</a></li></ul></section></div></body></html>
