--- a/content/首頁.html
+++ b/content/首頁.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='首頁.html'>首頁</a><li><a href='Webots.html'>Webots</a></li>
+                     <li><a href='首頁.html'>首頁</a><li><a href='Webots.html'>Webots</a><li><a href='Python.html'>Python</a></li>
                       </ul>
                 </nav>
               </div>
