新增模擬影片

--- a/config/content.htm
+++ b/config/content.htm
@@ -12,7 +12,12 @@
 </li>
 <li>使用 python 的 OpenCV 讀取圖片後生成移動路徑，畫出圖片形狀</li>
 </ol>
-<h1>Webots</h1>
+<p>已完成的檔案(<a href="/downloads/5 bar.zip">5 bar.zip</a>)</p>
+<p>以下為Webots的完整模擬影片</p>
+<p>1.以下載的.slt檔進行模擬</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/o18N240QvvY?si=viyMjXwtNIhifhrV" title="YouTube video player" width="560"></iframe></p>
+<p>2.在Webots內直接建立模型進行模擬</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/dkrwqZbNpSQ?si=Dbat-oJ78Z8Vgmoj" title="YouTube video player" width="560"></iframe></p><h1>Webots</h1>
 <h4 data-path-to-node="4">1. 什麼是 Webots？</h4>
 <p data-path-to-node="5">Webots 是由 Cyberbotics 公司開發，並於 2018 年正式開源的機器人模擬器。它支援多種作業系統（Windows, Linux, macOS），廣泛應用於工業機器人、自動駕駛、無人機以及多 agent 系統的開發與教學。</p>
 <p data-path-to-node="6">其核心優勢在於能夠提供精確的物理運算與擬真的視覺傳饋，讓使用者在將演算法部署到實體硬體前，先在虛擬環境中完成驗證。</p>
