--- a/content/首頁.html
+++ b/content/首頁.html
@@ -156,7 +156,12 @@ img.add_border {
 </li>
 <li>使用 python 的 OpenCV 讀取圖片後生成移動路徑，畫出圖片形狀</li>
 </ol>
-<br /> <a href='Webots.html'>Next</a> >> Webots</div>
+<p>已完成的檔案(<a href="./../downloads/5 bar.zip">5 bar.zip</a>)</p>
+<p>以下為Webots的完整模擬影片</p>
+<p>1.以下載的.slt檔進行模擬</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/o18N240QvvY?si=viyMjXwtNIhifhrV" title="YouTube video player" width="560"></iframe></p>
+<p>2.在Webots內直接建立模型進行模擬</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/dkrwqZbNpSQ?si=Dbat-oJ78Z8Vgmoj" title="YouTube video player" width="560"></iframe></p><br /> <a href='Webots.html'>Next</a> >> Webots</div>
         
     <!-- footer -->
       <div class="container">
