--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -12,7 +12,12 @@
 </li>
 <li>使用 python 的 OpenCV 讀取圖片後生成移動路徑，畫出圖片形狀</li>
 </ol>
-<h1>Webots</h1>
+<p></p>
+<p>以下為Webots的完整模擬影片</p>
+<p>1.以下載的.slt檔進行模擬</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/o18N240QvvY?si=viyMjXwtNIhifhrV" title="YouTube video player" width="560"></iframe></p>
+<p>2.在Webots內直接建立模型進行模擬</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/dkrwqZbNpSQ?si=Dbat-oJ78Z8Vgmoj" title="YouTube video player" width="560"></iframe></p><h1>Webots</h1>
 <h4 data-path-to-node="4">1. 什麼是 Webots？</h4>
 <p data-path-to-node="5">Webots 是由 Cyberbotics 公司開發，並於 2018 年正式開源的機器人模擬器。它支援多種作業系統（Windows, Linux, macOS），廣泛應用於工業機器人、自動駕駛、無人機以及多 agent 系統的開發與教學。</p>
 <p data-path-to-node="6">其核心優勢在於能夠提供精確的物理運算與擬真的視覺傳饋，讓使用者在將演算法部署到實體硬體前，先在虛擬環境中完成驗證。</p>
@@ -120,7 +125,7 @@
 </li>
 </ul>
 <p>以下為此模擬的python組件介紹</p>
-<h4 data-path-to-node="8">1. NumPy：數值計算的核心核心</h4>
+<h4 data-path-to-node="8">1. <a href="https://pypi.org/project/numpy/">NumPy</a>：數值計算的核心核心</h4>
 <p data-path-to-node="9">NumPy (Numerical Python) 是 Python 科學計算的基礎。它提供了高效的「多維陣列」物件（ndarray），讓複雜的矩陣運算變得既簡單又快速。</p>
 <h4 data-path-to-node="10">NumPy 的核心優勢</h4>
 <ul data-path-to-node="11">
@@ -136,7 +141,7 @@
 </ul>
 <p>此次用於五連桿逆運動學的計算</p>
 <p></p>
-<h4 data-path-to-node="13">2. OpenCV：賦予機器人視覺能力</h4>
+<h4 data-path-to-node="13">2. <a href="https://pypi.org/project/opencv-python/">OpenCV</a>：賦予機器人視覺能力</h4>
 <p data-path-to-node="14">OpenCV (Open Source Computer Vision Library) 是一個開源的電腦視覺庫。它能處理從影像讀取、處理到高級物體偵測的所有任務。</p>
 <h4 data-path-to-node="15">在工程研究中的應用</h4>
 <ul data-path-to-node="16">
