新增倉庫網址

--- a/content/index.html
+++ b/content/index.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='首頁.html'>首頁</a><li><a href='Webots.html'>Webots</a><li><a href='Python.html'>Python</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Webots.html'>Webots</a><li><a href='Python.html'>Python</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,7 +141,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Webots.html'>Next</a> >> Webots<br /><h1>首頁</h1>
+    <div id="tipue_search_content"> <a href='Webots.html'>Next</a> >> Webots<br /><h1>About</h1>
+<p>repo：<a href="https://github.com/Ciaoyeah/5-bar-Linkage-Plotter">https://github.com/Ciaoyeah/5-bar-Linkage-Plotter</a></p>
+<p>網址：<a href="https://ciaoyeah.github.io/5-bar-Linkage-Plotter/content/index.html">https://ciaoyeah.github.io/5-bar-Linkage-Plotter/content/index.html</a></p>
 <p>課程：電腦輔助設計與實習2025</p>
 <p>此為41171130許明皓的個人網站</p>
 <p>分配作業內容：5-bar Linkage Plotter 的 Webots 模擬</p>
@@ -160,7 +162,8 @@ img.add_border {
 <p>1.以下載的.slt檔進行模擬</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/o18N240QvvY?si=viyMjXwtNIhifhrV" title="YouTube video player" width="560"></iframe></p>
 <p>2.在Webots內直接建立模型進行模擬</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/dkrwqZbNpSQ?si=Dbat-oJ78Z8Vgmoj" title="YouTube video player" width="560"></iframe></p><br /> <a href='Webots.html'>Next</a> >> Webots</div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/dkrwqZbNpSQ?si=Dbat-oJ78Z8Vgmoj" title="YouTube video player" width="560"></iframe></p>
+<br /> <a href='Webots.html'>Next</a> >> Webots</div>
         
     <!-- footer -->
       <div class="container">
