--- a/config/content.htm
+++ b/config/content.htm
@@ -1,4 +1,6 @@
-<h1>首頁</h1>
+<h1>About</h1>
+<p>repo：<a href="https://github.com/Ciaoyeah/5-bar-Linkage-Plotter">https://github.com/Ciaoyeah/5-bar-Linkage-Plotter</a></p>
+<p>網址：<a href="https://ciaoyeah.github.io/5-bar-Linkage-Plotter/content/index.html">https://ciaoyeah.github.io/5-bar-Linkage-Plotter/content/index.html</a></p>
 <p>課程：電腦輔助設計與實習2025</p>
 <p>此為41171130許明皓的個人網站</p>
 <p>分配作業內容：5-bar Linkage Plotter 的 Webots 模擬</p>
@@ -17,7 +19,8 @@
 <p>1.以下載的.slt檔進行模擬</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/o18N240QvvY?si=viyMjXwtNIhifhrV" title="YouTube video player" width="560"></iframe></p>
 <p>2.在Webots內直接建立模型進行模擬</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/dkrwqZbNpSQ?si=Dbat-oJ78Z8Vgmoj" title="YouTube video player" width="560"></iframe></p><h1>Webots</h1>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/dkrwqZbNpSQ?si=Dbat-oJ78Z8Vgmoj" title="YouTube video player" width="560"></iframe></p>
+<h1>Webots</h1>
 <h4 data-path-to-node="4">1. 什麼是 Webots？</h4>
 <p data-path-to-node="5">Webots 是由 Cyberbotics 公司開發，並於 2018 年正式開源的機器人模擬器。它支援多種作業系統（Windows, Linux, macOS），廣泛應用於工業機器人、自動駕駛、無人機以及多 agent 系統的開發與教學。</p>
 <p data-path-to-node="6">其核心優勢在於能夠提供精確的物理運算與擬真的視覺傳饋，讓使用者在將演算法部署到實體硬體前，先在虛擬環境中完成驗證。</p>
