--- a/content/Webots.html
+++ b/content/Webots.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='首頁.html'>首頁</a><li><a href='Webots.html'>Webots</a><li><a href='Python.html'>Python</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Webots.html'>Webots</a><li><a href='Python.html'>Python</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">首頁 << <a href='首頁.html'>Previous</a> <a href='Python.html'>Next</a> >> Python<br /><h1>Webots</h1>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='Python.html'>Next</a> >> Python<br /><h1>Webots</h1>
 <h4 data-path-to-node="4">1. 什麼是 Webots？</h4>
 <p data-path-to-node="5">Webots 是由 Cyberbotics 公司開發，並於 2018 年正式開源的機器人模擬器。它支援多種作業系統（Windows, Linux, macOS），廣泛應用於工業機器人、自動駕駛、無人機以及多 agent 系統的開發與教學。</p>
 <p data-path-to-node="6">其核心優勢在於能夠提供精確的物理運算與擬真的視覺傳饋，讓使用者在將演算法部署到實體硬體前，先在虛擬環境中完成驗證。</p>
@@ -235,7 +235,7 @@ img.add_border {
 </ul>
 </li>
 </ol>
-<br />首頁 << <a href='首頁.html'>Previous</a> <a href='Python.html'>Next</a> >> Python</div>
+<br />About << <a href='About.html'>Previous</a> <a href='Python.html'>Next</a> >> Python</div>
         
     <!-- footer -->
       <div class="container">
