--- a/config/content.htm
+++ b/config/content.htm
@@ -159,3 +159,8 @@
 </li>
 </ul>
 <p>此次用於讀取圖片轉化成路徑</p>
+<h1>Final</h1>
+<p><span>41171130 - 2025 電腦輔助設計與實習期末考週題目一</span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/liUeolW8KTg?si=OW5_-fjGX3cHMzq7" title="YouTube video player" width="560"></iframe></p>
+<p><span>41171130 - 2025 電腦輔助設計與實習期末考週題目二</span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/FM9EWweDocY?si=vhxLcAtHIp0Kt3lD" title="YouTube video player" width="560"></iframe></p>
