--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,4 +1,6 @@
 <h1>About</h1>
+<p>repo：<a href="https://github.com/Ciaoyeah/5-bar-Linkage-Plotter">https://github.com/Ciaoyeah/5-bar-Linkage-Plotter</a></p>
+<p>網址：<a href="https://ciaoyeah.github.io/5-bar-Linkage-Plotter/content/index.html">https://ciaoyeah.github.io/5-bar-Linkage-Plotter/content/index.html</a></p>
 <p>課程：電腦輔助設計與實習2025</p>
 <p>此為41171130許明皓的個人網站</p>
 <p>分配作業內容：5-bar Linkage Plotter 的 Webots 模擬</p>
@@ -157,3 +159,5 @@
 </li>
 </ul>
 <p>此次用於讀取圖片轉化成路徑</p>
+<h1><span>Final</span></h1>
+<p><span></span></p>
