--- a/content/index.html
+++ b/content/index.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Webots.html'>Webots</a><li><a href='Python.html'>Python</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Webots.html'>Webots</a><li><a href='Python.html'>Python</a><li><a href='Final.html'>Final</a></li>
                       </ul>
                 </nav>
               </div>
